--- a/indexvc.html
+++ b/indexvc.html
@@ -47,7 +47,7 @@ function reply(){
   
         else if(x=='touch'){
                 responsiveVoice.speak("ok use touch version of the web app");
-                window.location.href='touchmenuvc.html';                                                               
+                window.location.href='touchmenu.html';                                                               
         }
         else{
            
