--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function reply(){
             
         if (x=='voice'){
                
-           responsiveVoice.speak(("ok use voice version of the web app Here we have phone, calendar, appliances, activities, exercise and find"));
+           responsiveVoice.speak(("ok use voice version of the web app"));
                 window.location.href='touchmenuvc.html';  
         }
   
