--- a/REMINDERvc.html
+++ b/REMINDERvc.html
@@ -70,7 +70,7 @@
        
                          if (x=='home' || x=='go home' ){
                            responsiveVoice.speak(("Here we have phone, calendar, appliances, activities, exercise and find"));
-                            window.location.href='HOMEvc.html';
+                            window.location.href='touchmenuvc.html';
 
                         }
                         else if (x=='back' || x=='go back' || x=='0' ){
