--- a/MEDSmorningvc.html
+++ b/MEDSmorningvc.html
@@ -7,7 +7,7 @@
     <title>MEDSYESNO</title>
     <link rel="stylesheet" href="/CSS/main.css">
 </head>
-<body onload=record()>
+<body onload=setTimeout(record,2000);>
     <script type="text/javascript" src="https://code.responsivevoice.org/responsivevoice.js"></script>
     <div class="container">
         
